# elicznik-rs

./: Cargo.toml  README.md
src/: database.rs  main.rs  parser.rs  scraper.rs
