[package]
name = "elicznik"
authors = ['Mariusz Białończyk']
version = "0.1.0"
edition = "2021"
license = 'GPL-2.0'
description = 'Utility for scraping energy meter data from Tauron eLicznik service and saving to PostgreSQL'
documentation = 'https://github.com/manio/elicznik-rs'
readme = 'README.md'
include = ['/README.md', '/LICENSE', '/Cargo.toml', '/Cargo.lock', '/src/*.rs', 'images/*']
keywords = ['tauron', 'elicznik', 'scraper', 'postgresql']
categories = ['command-line-utilities']
homepage = 'https://github.com/manio/elicznik-rs'
repository = 'https://github.com/manio/elicznik-rs'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }
reqwest = { version = "0.11.9", features = ["cookies"] }
tokio = { version = "1", features = ["full"] }
postgres = { version = "0.19.*", features = ["with-chrono-0_4"] }
postgres-openssl = "0.5.0"
rust-ini = "0.10.3"
openssl = { version = "0.10.*", features = ["vendored"] }
log = "0.4.1"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
clap = { version = "3.0.13", features = ["derive"] }
